--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Montserrat&display=swap: 100, 200, 300, 400, 500, 600, 700');
 
+
+.bg-color-name-title {
+    background-color: #676767;
+}
+
+.ui-menu-color-home {
+    background-color: #e67e22;
+}
+
+/* Heading */
+
+header {
+    margin: 0;
+}
+
+.heading {
+    margin-left: 50px;
+}
+
 .logo {
-    background-image: url("../images/stephen.jpg");
+    background: url("../images/stephen.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -9,4 +28,23 @@
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
+    border-radius: 20px;
 }
+
+.name {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 100;
+    font-size: 46px;
+    margin-top: 50px;
+    color: #fff;
+}
+
+.title {
+    font-family: "ABeeZee", sans-serif;
+    font-weight: 200;
+    font-size: 28px;
+    margin-top: 20px;
+    margin-bottom: 90px;
+    color: #fff;
+}
+
