--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@
     background-color: #fff;
 }
 
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -19,7 +23,7 @@
 }
 
 .ui-menu-color-contact {
-    background-color: #3498db;
+    background-color: #e84610;
 }
 
 .ui-menu-color-download {
@@ -220,4 +224,48 @@ footer {
 
 .three-reasons-heading {
     margin-bottom: 15px;
+}
+
+/* Personal Info */
+
+.personal-info-item {
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+    padding-right: 8px;
+    display: inline-block;
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin: 0;
+}
+
+.personal-info-item .key {
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personal-info-item .key p {
+    font-weight: 700;
+}
+
+.personal-info-item .value {
+    position: relative;
+    width: 60%;
+}
+
+.personal-info-item a {
+    text-decoration: none;
+    color: black;
+}
+
+.personal-info-item a:hover {
+    color: #e84610;
 }
